@@ -1,3 +1,5 @@
+31-10-2004 Qball <Qball@qballcow.nl>
+	* src/playlist3.c:	Add right mouse menu in right pane
 28-10-2004 Qball <Qball@qballcow.nl>
 	* src/playlist3.c:	Added clear/shuffle/info option
 
